fix: fix sidecar a11y contrast issue (#110)
fix sidecar a11y contrast issue with td headers and icons

#856

--- a/src/src-web/styles/index.scss
+++ b/src/src-web/styles/index.scss
@@ -725,6 +725,12 @@ span{
   }
 }
 
+// SIDECAR STYLING
+
+.sidecar-header-icon {
+  color: var(--color-map-key)
+}
+
 .custom-content{
   .related--resource{
     width: 100%;
@@ -764,14 +770,14 @@ span{
       font-size: 0.75rem;
       text-transform: uppercase;
       font-weight: 500;
-      color: var(--color-name);
+      color: var(--color-map-key);
     }
 
     .bx--structured-list-td-related-header{
       font-size: 0.98rem;
       text-transform: uppercase;
       font-weight: 500;
-      color: var(--color-name);
+      color: var(--color-map-key);
     }
   
     .bx--structured-list-td{
@@ -840,7 +846,7 @@ span{
           .bx--structured-list-td-related-header{
             font-size: 2rem;
             font-weight: 500;
-            color: var(--color-name);
+            color: var(--color-map-key);
             text-decoration: none;
             opacity: 0.8;
           }
